--- a/public/css/postCss.css
+++ b/public/css/postCss.css
@@ -1078,9 +1078,6 @@ select {
 .top-0 {
 	top: 0px;
 }
-.top-1\/2 {
-	top: 50%;
-}
 .z-0 {
 	z-index: 0;
 }
@@ -1099,10 +1096,6 @@ select {
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
-}
-.my-0 {
-	margin-top: 0px;
-	margin-bottom: 0px;
 }
 .-my-2 {
 	margin-top: -0.5rem;
@@ -1177,11 +1170,11 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.mb-3 {
-	margin-bottom: 0.75rem;
-}
 .-mt-px {
 	margin-top: -1px;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
 .block {
 	display: block;
@@ -1230,9 +1223,6 @@ select {
 }
 .h-full {
 	height: 100%;
-}
-.h-0 {
-	height: 0px;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1536,6 +1526,10 @@ select {
 .bg-transparent {
 	background-color: transparent;
 }
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
@@ -1635,11 +1629,11 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pr-3 {
-	padding-right: 0.75rem;
-}
 .pt-8 {
 	padding-top: 2rem;
+}
+.pr-3 {
+	padding-right: 0.75rem;
 }
 .text-center {
 	text-align: center;
