--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,12 +1,24 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
-@import '~@fortawesome/fontawesome-free/scss/brands';
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+.loading-spinner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    opacity: .75;
+}
 /*!
  * Load Awesome v1.1.0 (http://github.danielcardoso.net/load-awesome/)
  * Copyright 2015 Daniel Cardoso <@DanielCardoso>
@@ -144,75 +156,4 @@
      height: 24px;
      margin-top: -12px;
      margin-left: -12px;
- }
- /*
-  * Animation
-  */
- @-webkit-keyframes ball-spin {
-     0%,
-     100% {
-         opacity: 1;
-         -webkit-transform: scale(1);
-                 transform: scale(1);
-     }
-     20% {
-         opacity: 1;
-     }
-     80% {
-         opacity: 0;
-         -webkit-transform: scale(0);
-                 transform: scale(0);
-     }
- }
- @-moz-keyframes ball-spin {
-     0%,
-     100% {
-         opacity: 1;
-         -moz-transform: scale(1);
-              transform: scale(1);
-     }
-     20% {
-         opacity: 1;
-     }
-     80% {
-         opacity: 0;
-         -moz-transform: scale(0);
-              transform: scale(0);
-     }
- }
- @-o-keyframes ball-spin {
-     0%,
-     100% {
-         opacity: 1;
-         -o-transform: scale(1);
-            transform: scale(1);
-     }
-     20% {
-         opacity: 1;
-     }
-     80% {
-         opacity: 0;
-         -o-transform: scale(0);
-            transform: scale(0);
-     }
- }
- @keyframes ball-spin {
-     0%,
-     100% {
-         opacity: 1;
-         -webkit-transform: scale(1);
-            -moz-transform: scale(1);
-              -o-transform: scale(1);
-                 transform: scale(1);
-     }
-     20% {
-         opacity: 1;
-     }
-     80% {
-         opacity: 0;
-         -webkit-transform: scale(0);
-            -moz-transform: scale(0);
-              -o-transform: scale(0);
-                 transform: scale(0);
-     }
  }
