--- a/public/css/postCss.css
+++ b/public/css/postCss.css
@@ -750,6 +750,39 @@ select {
 [type='file']:focus {
 	outline: 1px auto -webkit-focus-ring-color;
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
 .prose {
 	color: #374151;
 	max-width: 65ch;
@@ -1093,6 +1126,9 @@ select {
 .m-3 {
 	margin: 0.75rem;
 }
+.m-5 {
+	margin: 1.25rem;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1100,6 +1136,10 @@ select {
 .-my-2 {
 	margin-top: -0.5rem;
 	margin-bottom: -0.5rem;
+}
+.-mx-1 {
+	margin-left: -0.25rem;
+	margin-right: -0.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1170,11 +1210,23 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .-mt-px {
 	margin-top: -1px;
 }
-.mb-3 {
-	margin-bottom: 0.75rem;
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+.mt-12 {
+	margin-top: 3rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .block {
 	display: block;
@@ -1187,6 +1239,9 @@ select {
 }
 .inline-flex {
 	display: inline-flex;
+}
+.table {
+	display: table;
 }
 .grid {
 	display: grid;
@@ -1269,6 +1324,9 @@ select {
 .w-20 {
 	width: 5rem;
 }
+.w-64 {
+	width: 16rem;
+}
 .min-w-0 {
 	min-width: 0px;
 }
@@ -1286,6 +1344,9 @@ select {
 }
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-full {
+	max-width: 100%;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1328,6 +1389,9 @@ select {
 }
 .cursor-pointer {
 	cursor: pointer;
+}
+.cursor-not-allowed {
+	cursor: not-allowed;
 }
 .list-inside {
 	list-style-position: inside;
@@ -1526,9 +1590,13 @@ select {
 .bg-transparent {
 	background-color: transparent;
 }
-.bg-black {
+.bg-green-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1542,6 +1610,12 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
+}
+.p-4 {
+	padding: 1rem;
+}
+.p-1 {
+	padding: 0.25rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1629,11 +1703,20 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
+.pr-3 {
+	padding-right: 0.75rem;
+}
 .pt-8 {
 	padding-top: 2rem;
 }
-.pr-3 {
-	padding-right: 0.75rem;
+.pl-4 {
+	padding-left: 1rem;
+}
+.pr-10 {
+	padding-right: 2.5rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
@@ -1683,6 +1766,9 @@ select {
 .font-normal {
 	font-weight: 400;
 }
+.font-bold {
+	font-weight: 700;
+}
 .uppercase {
 	text-transform: uppercase;
 }
@@ -1700,6 +1786,12 @@ select {
 }
 .leading-snug {
 	line-height: 1.375;
+}
+.leading-none {
+	line-height: 1;
+}
+.leading-loose {
+	line-height: 2;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
@@ -1767,6 +1859,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1793,6 +1889,9 @@ select {
 }
 .opacity-50 {
 	opacity: 0.5;
+}
+.opacity-25 {
+	opacity: 0.25;
 }
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
@@ -1857,6 +1956,9 @@ select {
 .duration-300 {
 	transition-duration: 300ms;
 }
+.duration-100 {
+	transition-duration: 100ms;
+}
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1893,6 +1995,14 @@ select {
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -2275,6 +2385,11 @@ select {
 	.md\:border-l {
 		border-left-width: 1px;
 	}
+
+	.md\:py-10 {
+		padding-top: 2.5rem;
+		padding-bottom: 2.5rem;
+	}
 }
 @media (min-width: 1024px) {
 
@@ -2291,12 +2406,10 @@ select {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
-}
-@media (min-width: 1280px) {
 
-	.xl\:mx-8 {
-		margin-left: 2rem;
-		margin-right: 2rem;
+	.lg\:px-12 {
+		padding-left: 3rem;
+		padding-right: 3rem;
 	}
 }
 
