--- a/public/css/scss.css
+++ b/public/css/scss.css
@@ -6114,6 +6114,21 @@ readers do not read off random characters that represent icons */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.toggle-checkbox {
+  @apply text-white;
+}
+
+.toggle-checkbox:checked {
+  @apply right-0;
+  @apply border-transparent;
+  transition: all 0.5s;
+}
+
+.toggle-checkbox:checked + .toggle-label {
+  @apply bg-green-400;
+  transition: all 0.5s;
+}
+
 .loading-spinner {
   display: flex;
   justify-content: center;
